# rr-environment

./: .gitignore  BOM.txt  CMakeLists.txt  README.md  stdout
include/rrenvironment/: microprocessor.h  rr_i2c.h  rr_logger_hook.hpp  rrenvironment.h  rrenvironment.pc.in
rrenvironment/components/: component.hpp  l298.hpp
scripts/: .Dockerfile.swp  Dockerfile  setup.bash
src/rrenvironment/: Actions.hpp  L298.~~~  Wiring.hpp  actions.hpp  componentfact.cpp  componentfact.hpp  observers.hpp  rrenvironment.cpp  rrenvironment.hpp  wiring.hpp
src/rrenvironment/actions/: l298.cpp  l298.hpp
src/rrenvironment/components/: l298.hpp
src/rrenvironment/functions/: README.md  function.hpp  rr_motors.hpp
src/rrenvironment/observers/: hcsr04.cpp  hcsr04.hpp
src/rrenvironment/wiring/: README.md  wiringgpio.cpp  wiringgpio.hpp  wiringi2c.cpp  wiringi2c.hpp  wiringmc.hpp  wiringmock.cpp
test/: test_component_fact.cpp  test_hcsr04.cpp  test_i2c.cpp  test_l298.cpp
